VFS-5651 Fixed wrong position of dropdown map in spaces data view

--- a/src/app/styles/content-spaces-data.scss
+++ b/src/app/styles/content-spaces-data.scss
@@ -69,14 +69,11 @@
       .map-selector {
         top: $content-header-row-mobile-height + $-one-tab-bar-height + $padding-base-vertical
       }
-      .hello-world {
-        
-      }
     }
     
     @media (max-width: $screen-xs-max) {
       .map-selector {
-        top: $-one-tab-bar-height + $padding-base-vertical;
+        top: $-one-tab-bar-height + $padding-base-vertical - $content-col-padding;
       }
     }
 
